--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TOKEN=
-PREFIX=
-BOT_ACTIVITY_TYPE=
-BOT_ACTIVITY_TEXT=
-DAILY_SALARY=
-MONTHLY_SALARY=
+TOKEN=OTIwOTAwNDU3NTEyMTk4MjA0.YbrFYg.aBW-s-J9N6NWAWmeyf1MPKq7fQ4
+PREFIX=<
+BOT_ACTIVITY_TYPE=PLAYING
+BOT_ACTIVITY_TEXT=Graphics Coins
+DAILY_SALARY=2500
+MONTHLY_SALARY=10000
